# autoconfig

./: Cargo.toml  Makefile  README.md  package.json
.github/workflows/: release.yml  test.yml
src/: client.rs  dns.rs  error.rs  http.rs  lib.rs  parse.rs  test.rs
