[package]
name = "autoconfig"
authors = ["Guus van Meerveld"]
description = "A simple implementation of Mozilla Thunderbird's autoconfig"
license = "MIT"
documentation = "https://docs.dust.email/packages/autoconfig"
repository = "https://github.com/Dust-Mail/autoconfig"
readme = "README.md"
version = "0.3.1"
edition = "2021"

rust-version = "1.65.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde-xml-rs = "0.6"
serde = {version = "1", features = ["derive"] }
futures = "0.3"
reqwest = "0.11" 
regex = "1.7"
bytes = "1.4.0"
trust-dns-resolver = "0.22.0"
trust-dns-proto = "0.22.0"

[dev-dependencies]
tokio = { version = "1.26", features = ["full"] }
