[package]
name = "autoconfig"
authors = ["Guus van Meerveld"]
description = "A simple implementation of Mozilla Thunderbird's autoconfig"
license = "MIT"
documentation = "https://docs.dust.email/packages/autoconfig"
repository = "https://github.com/Dust-Mail/autoconfig"
readme = "README.md"
version = "0.4.0"
edition = "2021"

rust-version = "1.65.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde-xml-rs = "0.6"
serde = {version = "1", features = ["derive"] }
futures = "0.3"
regex = "1.10"
bytes = "1.5.0"
trust-dns-resolver =  "0.22.0"
async-std-resolver = { version = "0.22.0", optional = true }
trust-dns-proto = "0.22.0"
surf = { version = "2.3.2", default-features = false, features = ["curl-client", "encoding"]}

[dev-dependencies]
async-std = {version = "1.12.0", features = ["attributes"]}
tokio = { version = "1.33", features = ["full"] }

[features]

default = ["runtime-tokio"]
runtime-tokio = []
runtime-async-std = [ "dep:async-std-resolver"]
